<resources>
    <string name="app_name">A17010</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="title_message">信息</string>
    <string name="title_dialog">弹窗</string>
    <string name="title_mine">我的</string>
    <string name="navigation">导航</string>
    <string name="punch">打卡</string>
    <string name="inspection">巡检</string>
    <string name="upload_image">传图</string>
    <string name="upload_location">报位</string>
    <string name="location">定位</string>
    <string name="space"/>
    <string name="zoom_out">缩小</string>
    <string name="zoom_in">放大</string>
    <string name="viewpoint">视角</string>
    <string name="plz_input">请输入关键字</string>
    <string name="enter">进入</string>
    <string name="simulation">模拟导航</string>
    <string name="details">路线详情</string>
    <string name="delete">删除路线</string>
    <string name="pause">暂停</string>
    <string name="accelerate">加速</string>
    <string name="decelerate">减速</string>
    <string name="end">结束</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="empty_info">短信列表为空</string>
    <string name="action_search">搜索</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="send">发送</string>
    <string name="edit_info">请输入</string>
    <string name="new_message">新短信</string>
    <string name="receiver">收件人</string>
    <string name="contact">通讯录</string>
    <string name="title_activity_contact">ContactActivity</string>
</resources>
