<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.yang.eric.a17010.ui.activity.MessageActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="60"
        android:title="@string/receiver"
        android:icon="@drawable/ic_add_white"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/contact"
        android:icon="@drawable/ic_group_add"
        app:showAsAction="always"/>
</menu>
