<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yang.eric.a17010.ui.fragment.MapsFragment">
    <com.yang.eric.a17010.map.DemoMapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/rl_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/btn_zoom_in"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/circle_button_with_shadow"
            android:contentDescription="@string/zoom_in"
            android:src="@drawable/btn_zoom_in"/>

        <ImageButton
            android:id="@+id/btn_zoom_out"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_below="@id/btn_zoom_in"
            android:background="@drawable/circle_button_with_shadow"
            android:contentDescription="@string/zoom_out"
            android:src="@drawable/btn_zoom_out"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/btn_lock"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/rl_zoom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/circle_button_with_shadow"
        android:contentDescription="@string/viewpoint"
        android:src="@drawable/ic_navigation"/>

        <!-- 搜索栏  -->
    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/search_maps_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_with_shadow">

        <ImageButton
            android:id="@+id/btn_switch"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_margin="2dp"
            android:background="@drawable/button_background_selector"
            android:src="@drawable/ic_menu_black"/>


        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="2dp"
            android:background="@drawable/button_background_selector"
            android:src="@drawable/ic_search_black"
            tools:ignore="ContentDescription,RtlHardcoded"/>

        <EditText
            android:id="@+id/poi_search_in_maps"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@+id/btn_search"
            android:layout_toRightOf="@+id/btn_switch"
            android:background="@android:color/transparent"
            android:completionThreshold="1"
            android:cursorVisible="false"
            android:dropDownVerticalOffset="1dp"
            android:hint="@string/plz_input"
            android:imeOptions="actionSearch|flagNoExtractUi"
            android:inputType="text|textAutoComplete"
            android:maxHeight="48dp"
            android:maxLength="20"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="16sp"/>
    </RelativeLayout>

</RelativeLayout>
